# SIMUG

./: CMakeLists.txt  README.md
MESHES/: output1024.vtk
MESHES/pmf/: Box_low_res.pmf  square4km.pmf  square8km.pmf
MESHES/pmf/cut_sphere_ani/: spherecut160km.pmf  spherecut16km.pmf  spherecut32km.pmf
MESHES/pmf/sphere_ani/: Sphere_unit_ani.pmf  sphere200km.pmf
MESHES/pmf/square_1000km_ani/: square1000km_15km_ani.pmf
MESHES/pmf/square_100km_ani/: square100km_8km_ani.pmf
MESHES/pmf/square_1024km_uni/: square1024km_16km_uni.pmf
MESHES/pmf/square_512km_uni/: square512km_4km_uni.pmf  square512km_8km_uni.pmf
MESHES/vtk/: Box_low_res.vtk  SQUARE_FULL_LOW_RES.vtk  output2048.vtk  spherecut160km.vtk  spherecut16km.vtk  spherecut32km.vtk  square4km.vtk  square8000.vtk  square8km.vtk  square_1000km_15km.vtk
advection/: CMakeLists.txt
advection/inc/: advection.hpp  fct_zalesak.hpp  function.hpp  local_assembling.hpp  numerical.hpp
advection/src/: advection.cpp  agrid_advection.cpp  cgrid_advection.cpp  fct_zalesak.cpp  local_assembling.cpp  numerical.cpp
configuration/: CMakeLists.txt
configuration/inc/: adv_config.hpp  config.hpp
configuration/src/: adv_config.cpp  dyn_config.cpp  mesh_config.cpp  model_config.cpp  phys_config.cpp
examples/: CMakeLists.txt
examples/A-AgridSphereAdvection/: config.txt  launcher.qs  main.cpp  parser.hpp
examples/A-CgridSphereAdvection/: CMakeLists.txt  main.cpp
examples/B-AgridSphereAdvection/: CMakeLists.txt  main.cpp
examples/B-CgridSphereAdvection/: CMakeLists.txt  config.txt  launcher.qs  main.cpp  parser.hpp  test_forcing.hpp
examples/C-CgridPlaneAdvection/: CMakeLists.txt  main.cpp
examples/D-AgridPlaneAdvection/: CMakeLists.txt  main.cpp
examples/E-AgridLkfBox/: CMakeLists.txt  config.txt  main.cpp  parser.hpp
examples/F-CgridLkfBox/: CMakeLists.txt  config.txt  main.cpp  parser.hpp
examples/G-AgridBox/: CMakeLists.txt  config.txt  launcher.qs  main.cpp
examples/H-CgridBox/: CMakeLists.txt  config.txt  icon.f90  icon_sph.f90  launcher.qs  main.cpp  parser.hpp
examples/I-AgridCutSphere/: CMakeLists.txt  config.txt  main.cpp  parser.hpp
examples/J-CgridCutSphere/: CMakeLists.txt  config.txt  launcher.qs  main.cpp
examples/K-AgridArctic/: CMakeLists.txt  main.cpp
examples/L-CgridArctic/: CMakeLists.txt  launcher.qs  main.cpp
forcing/: CMakeLists.txt
forcing/src/: forcing.cpp
mesh/: CMakeLists.txt
mesh/inc/: basis.hpp  data.hpp  gridinfo.hpp  gridvars.hpp  mesh.hpp
mesh/src/: basis.cpp  data.cpp  gridinfo.cpp  mesh.cpp
momentum/inc/: momentum.hpp
source/: CMakeLists.txt
source/advection/: CMakeLists.txt  agrid_advection.cpp  cgrid_advection.cpp  function.cpp
source/configuration/: CMakeLists.txt
source/configuration/inc/: dyn_config.hpp  forc_config.hpp  mesh_config.hpp  model_config.hpp  phys_config.hpp
source/configuration/src/: config.cpp  forc_config.cpp
source/forcing/: CMakeLists.txt  cams_interpolation.cpp  forcing.cpp  topaz_interpolation.cpp
source/headers/: CMakeLists.txt  advection.hpp  cams_interpolation.hpp  coords_rotation.hpp  forcing.hpp  gridvars.hpp  interpolation2d.hpp  logger.hpp  mesh.hpp  momentum.hpp  ncfile_info.hpp  simug.hpp  stringtrim.hpp  tools.hpp  topaz_interpolation.hpp  vecmath.hpp
source/headers/variables/: CMakeLists.txt  advvar.hpp  constants.hpp  coordvar.hpp  defines.hpp  dynvar.hpp  mesh_data.hpp  phys_var.hpp
source/mesh/: CMakeLists.txt  basis.cpp  data.cpp  gridinfo.cpp  mesh.cpp
source/momentum/: CMakeLists.txt  agrid_momentum.cpp  cgrid_momentum.cpp  momentum.cpp  old_mom.cpp
source/tools/: CMakeLists.txt  interpolation2d.cpp  stringtrim.cpp  topaz_coords.cpp
tests/: CMakeLists.txt
tests/test_advection/: CMakeLists.txt  main.cpp
tests/test_config/: CMakeLists.txt  main.cpp
tests/test_forcing/: CMakeLists.txt
tests/test_forcing/A-analytical/: CMakeLists.txt  main.cpp
tests/test_forcing/B-netcdf/: CMakeLists.txt
tests/test_mesh/: CMakeLists.txt
tests/test_mesh/A-data/: CMakeLists.txt  main.cpp
tests/test_mesh/B-load/: CMakeLists.txt  main.cpp
tests/test_mesh/C-bnd/: CMakeLists.txt  main.cpp
tests/test_mesh/D-id/: CMakeLists.txt  main.cpp
tests/test_mesh/E-mute/: CMakeLists.txt  main.cpp
tests/test_mesh/F-no_plane/: CMakeLists.txt  main.cpp
tests/test_mesh/G-prognostic_forcing/: CMakeLists.txt  main.cpp
tests/test_mesh/H-basis/: CMakeLists.txt  main.cpp
tests/test_mesh/I-vec-transition/: CMakeLists.txt  main.cpp
tests/test_mesh/inc/: tests.hpp
tests/test_mesh/src/: main.cpp  test_bnd_selection.cpp  test_data.cpp  test_id.cpp  test_mesh_load.cpp  test_mute.cpp
tests/test_tools/: CMakeLists.txt  main.cpp
tests/test_variables/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt
tools/inc/: timer.hpp  tools.hpp  vecmath.hpp
tools/src/: timer.cpp  vecmath.cpp
variables/: CMakeLists.txt
variables/inc/: advvar.hpp  allvars.hpp  confvar.hpp  coordvar.hpp  defines.hpp  forcvar.hpp  mesh_data.hpp  mesh_info.hpp  meshdata.hpp  model_var.hpp  modvar.hpp  phys_var.hpp  variable.hpp
variables/src/: variable.cpp
