add_subdirectory(A-AgridSphereAdvection)
add_subdirectory(B-CgridSphereAdvection)
#add_subdirectory(C-CgridPlaneAdvection)
#add_subdirectory(D-AgridPlaneAdvection)
#add_subdirectory(E-AgridLkfBox)
#add_subdirectory(F-CgridLkfBox)
#add_subdirectory(G-AgridBox)
#add_subdirectory(H-CgridBox)
#add_subdirectory(I-AgridCutSphere)
#add_subdirectory(J-CgridCutSphere)